--- a/index.html
+++ b/index.html
@@ -10,12 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700&family=Poppins:wght@500;600;800;900&display=swap"
       rel="stylesheet"
     />
-    <!-- <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-      crossorigin="anonymous"
-    /> -->
+
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="global.css" />
 
@@ -27,19 +22,20 @@
         <div class="leftSide">
           <img class="logo" src="img/logo.b57236.svg" alt="" />
           <ul class="list">
-            <li class="listItem">For Sellers</li>
-            <li class="listItem">For Buyers</li>
-            <li class="listItem">Testimonials</li>
-            <li class="listItem">About Us</li>
+            <li class="listItem d2-none">For Sellers</li>
+            <li class="listItem d2-none">For Buyers</li>
+            <li class="listItem d2-none">Testimonials</li>
+            <li class="listItem d2-none">About Us</li>
           </ul>
         </div>
         <ul class="rightSide">
-          <li class="listItem">Premium</li>
-          <li class="listItem">Resources</li>
-          <li class="listItem">Log In</li>
-          <li class="listItem cta">
+          <li class="listItem d-none">Premium</li>
+          <li class="listItem d-none">Resources</li>
+          <li class="listItem d2-none">Log In</li>
+          <li class="listItem cta d2-none">
             Join Now
             <img
+              class="d2-none"
               src="https://microacquire.com/assets/img/arrow-right-dark.11c40f.svg"
               alt=""
             />
@@ -135,8 +131,7 @@
             <li class="cardTexts mrright">
               <h3 class="cardheader">Sellers</h3>
               <p class="cardDesc">
-                List your startup for free <br />
-                and get eyes on it instantly.
+                List your startup for free and get eyes on it instantly.
               </p>
             </li>
             <li class="cardTexts mrrr p-0">
@@ -149,9 +144,8 @@
             <li class="cardTexts">
               <h3 class="cardheader">Buyers</h3>
               <p class="cardDesc">
-                Find your ideal startup and <br />
-                evaluate key metrics before <br />
-                making an offer.
+                Find your ideal startup and evaluate key metrics before making
+                an offer.
               </p>
             </li>
           </ul>
@@ -187,9 +181,8 @@
                     alt=""
                   />
                   <p>
-                    Get help to acquire with financing through Pipe (SaaS)
-                    <br />
-                    and eCommerce Lending (ecommerce)
+                    Get help to acquire with financing through Pipe (SaaS) and
+                    eCommerce Lending (ecommerce)
                   </p></span
                 >
               </div>
@@ -348,9 +341,7 @@
       <section class="testmonials">
         <div class="containerFix testCont">
           <h2 class="testmonialsHeader">
-            What do founders and <br />
-            buyers say about <br />
-            MicroAcquire?
+            What do founders and buyers say about MicroAcquire?
           </h2>
           <div class="founderDetails">
             <div class="founderImg">
@@ -420,14 +411,13 @@
         <div class="containerFix yellowCont">
           <div class="yellowCont-header">
             <h2>
-              Join over 100,000 founders <br />
-              and buyers already doing <br />
-              business on MicroAcquire
+              Join over 100,000 founders and buyers already doing business on
+              MicroAcquire
             </h2>
           </div>
-          <div class="yContBtn">
-            <a href="#" class="btnCont"
-              >Join Now
+          <div class="btn yContBtn">
+            <a href="#" class="leftBtn ctaPer"
+              >View Listings
               <img
                 src="https://microacquire.com/assets/img/arrow-right-button.a68abe.svg"
                 alt=""
@@ -509,363 +499,6 @@
         </nav>
       </div>
     </footer>
-
-    <!-- <main class="main-container">
-      <section class="hero-section">
-        <div class="container header-container">
-          <div class="hero-text-box">
-            <span class="subheading">500+ successful deals</span>
-            <h3 class="Primary-heading">
-              Everything you need to buy and sell startups. No fees. No hassle.
-              Total anonymity.
-            </h3>
-            <p class="hero-desc">
-              Join 100,000+ entrepreneurs buying and selling startups on the
-              world’s #1 acquisition marketplace. Get free and instant access to
-              100,000+ trusted buyers. Big or small, get your startup acquired
-              at the maximum price in as little as 30 days.
-            </p>
-            <div class="btn">
-              <a href="#" class="page-items-link button btn-left"
-                >View Listings
-                <img
-                  src="https://microacquire.com/assets/img/arrow-right-button.a68abe.svg"
-                  alt=""
-                />
-              </a>
-              <a href="#" class="page-items-link button btn-right">
-                <img src="img/play-button-dark.80efaa.svg" alt="" />Watch Video
-              </a>
-            </div>
-          </div>
-          <div class="hero-img-box">
-            <img
-              src="https://microacquire.com/assets/img/home-hero-image-mobile@2x.85dde1.png"
-              alt=""
-            />
-          </div>
-        </div>
-        <div class="logos">
-          <div class="container logo">
-            <img
-              src="https://microacquire.com/assets/img/press1.87a2d3.svg"
-              alt=""
-            />
-            <img
-              src="	https://microacquire.com/assets/img/press2.1278c8.svg"
-              alt=" business-insider logo"
-            />
-            <img
-              src="	https://microacquire.com/assets/img/press3.c6b618.svg"
-              alt="The New York Times logo"
-            />
-            <img
-              src="https://microacquire.com/assets/img/press4.95499c.svg"
-              alt="forbes logo"
-            />
-            <img
-              src="https://microacquire.com/assets/img/press5.6c0d8d.svg"
-              alt="USA Today logo"
-            />
-            <img
-              src="https://microacquire.com/assets/img/press6.6ee413.svg"
-              alt="USA Today logo"
-            />
-            <img
-              src="https://microacquire.com/assets/img/press7.3e9fd8.svg"
-              alt="USA Today logo"
-            />
-          </div>
-        </div>
-      </section>
-
-      <section class="sectionCards">
-        <h2 class="headingCards">
-          The world’s number one startup acquisition marketplace
-        </h2>
-        <div class="cardItem">
-          <div class="cardItems">
-            <img src="img/only-buyers-card@2x.1d44df.png" alt="" />
-            <h3 class="cardItemTxt">Sellers</h3>
-            <p class="cardDesc1">
-              List your startup for free &nbsp;&nbsp;&nbsp; and get eyes on it
-              instantly.
-            </p>
-          </div>
-          <div class="cardItems pTop">
-            <img src="img/only-platform-card@2x.827c41.png" alt="" />
-            <h3 class="cardItemTxt">Platform</h3>
-            <p class="cardDesc2">
-              We connect buyers and sellers, starting the right conversations
-              that lead to an acquisition.
-            </p>
-          </div>
-          <div class="cardItems">
-            <img src="img/only-sellers-card@2x.e2d76d.png" alt="" />
-            <h3 class="cardItemTxt">Buyers</h3>
-            <p class="cardDesc3">
-              Find your ideal startup and evaluate key metrics before making an
-              offer.
-            </p>
-          </div>
-        </div>
-      </section>
-
-      <section class="sectionDiscover">
-        <div class="container header-container">
-          <div class="hero-text-box">
-            <h3 class="Primary-heading">Discover your dream startup</h3>
-            <p class="discover-desc-para">
-              Search 1,000s of vetted startups to find your perfect match.
-              Derisk potential acquisitions and project returns using key
-              financial metrics. Be LOI-ready in as little as 30 days.
-            </p>
-            <div class="discover-list">
-              <div class="discover-list-item">
-                <span class="discover-desc">
-                  <img
-                    class="dotted-icon"
-                    src="https://cdn.iconscout.com/icon/free/png-256/dot-23-444664.png"
-                    alt=""
-                  />
-                  <p>
-                    Evaluate 20+ financial metrics, including MRR, CAC, and ARR
-                  </p></span
-                >
-              </div>
-              <div class="discover-list-item">
-                <span class="discover-desc">
-                  <img
-                    class="dotted-icon"
-                    src="https://cdn.iconscout.com/icon/free/png-256/dot-23-444664.png"
-                    alt=""
-                  />
-                  <p>
-                    Get help to acquire with financing through Pipe (SaaS) and
-                    eCommerce Lending (ecommerce)
-                  </p></span
-                >
-              </div>
-              <div class="discover-list-item">
-                <span class="discover-desc">
-                  <img
-                    class="dotted-icon"
-                    src="https://cdn.iconscout.com/icon/free/png-256/dot-23-444664.png"
-                    alt=""
-                  />
-                  <p>Easily create and send LOIs within the platform</p></span
-                >
-              </div>
-              <div class="discover-list-item">
-                <span class="discover-desc">
-                  <img
-                    class="dotted-icon"
-                    src="https://cdn.iconscout.com/icon/free/png-256/dot-23-444664.png"
-                    alt=""
-                  />
-                  <p>Filterable listings to help find your best fit</p></span
-                >
-              </div>
-            </div>
-            <div class="btn tell-more-btn">
-              <a href="#" class="page-items-link button btn-left"
-                >View Listings
-                <img
-                  src="https://microacquire.com/assets/img/arrow-right-button.a68abe.svg"
-                  alt=""
-                />
-              </a>
-            </div>
-          </div>
-          <div class="discover-img-box">
-            <div class="discover-inner-img">
-              <img src="img/img_1.png" alt="" />
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <section class="sectionDiscover">
-        <div class="container header-container">
-          <div class="discover-img-box">
-            <div class="discover-inner-img">
-              <img src="img/img_1.png" alt="" />
-            </div>
-          </div>
-          <div class="hero-text-box">
-            <h3 class="Primary-heading">
-              Sell quickly, easily, and for the highest price
-            </h3>
-            <p class="discover-desc-para">
-              List your startup in front of 100,000+ potential buyers. Hire
-              advisors to help manage and close your acquisition. Start
-              conversations that lead to acquisition in as little as 30 days.
-            </p>
-            <div class="discover-list">
-              <div class="discover-list-item">
-                <span class="discover-desc">
-                  <img
-                    class="dotted-icon"
-                    src="https://cdn.iconscout.com/icon/free/png-256/dot-23-444664.png"
-                    alt=""
-                  />
-                  <p>Always free to list and sell – no commissions</p></span
-                >
-              </div>
-              <div class="discover-list-item">
-                <span class="discover-desc">
-                  <img
-                    class="dotted-icon"
-                    src="https://cdn.iconscout.com/icon/free/png-256/dot-23-444664.png"
-                    alt=""
-                  />
-                  <p>
-                    Over 100,000 vetted buyers to maximize your chances of
-                    acquisition
-                  </p></span
-                >
-              </div>
-              <div class="discover-list-item">
-                <span class="discover-desc">
-                  <img
-                    class="dotted-icon"
-                    src="https://cdn.iconscout.com/icon/free/png-256/dot-23-444664.png"
-                    alt=""
-                  />
-                  <p>
-                    Approved advisors to help secure the best outcome for you
-                  </p></span
-                >
-              </div>
-              <div class="discover-list-item">
-                <span class="discover-desc">
-                  <img
-                    class="dotted-icon"
-                    src="https://cdn.iconscout.com/icon/free/png-256/dot-23-444664.png"
-                    alt=""
-                  />
-                  <p>
-                    Always anonymous – you choose what to share and with whom
-                  </p></span
-                >
-              </div>
-              <div class="discover-list-item">
-                <span class="discover-desc">
-                  <img
-                    class="dotted-icon"
-                    src="https://cdn.iconscout.com/icon/free/png-256/dot-23-444664.png"
-                    alt=""
-                  />
-                  <p>Easily sync payment gateways and startup metrics</p></span
-                >
-              </div>
-            </div>
-            <div class="btn tell-more-btn">
-              <a href="#" class="page-items-link button btn-left"
-                >Tell me more
-                <img
-                  src="https://microacquire.com/assets/img/arrow-right-button.a68abe.svg"
-                  alt=""
-                />
-              </a>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <section class="founderSection">
-        <div class="container founderDesc">
-          <div class="founderHeader">
-            <h2 class="founder-txt">
-              What do founders and buyers say about MicroAcquire?
-            </h2>
-          </div>
-          <div class="founderDetails">
-            <div class="founderImg">
-              <img
-                src="https://microacquire.com/assets/img/testimonial-nicolas.5c76e4.png"
-                alt=""
-              />
-            </div>
-            <div class="founderDetail">
-              <div class="founderAbout">
-                <span class="nameAuth">
-                  <p class="nameFounder">Nicolas Bresson-Déodat</p>
-                  <img
-                    class="dotted-icon"
-                    src="	https://microacquire.com/assets/img/testimonial-linkedin.e66487.svg"
-                    alt=""
-                /></span>
-                <span class="founderOF"
-                  >Co-Founder and CEO of <a href="#">Steero</a></span
-                >
-              </div>
-            </div>
-          </div>
-          <div class="founder-desc">
-            <p class="quote">
-              MicroAcquire is hands down the best platform for selling your
-              startup. After listing Steerio we had over
-              <span class="quote-accent">50 serious buyers</span> reach out to
-              us. We could not have expected such a
-              <span class="quote-accent">strong response</span> from so many
-              buyers so quickly but it helped us find a
-              <span class="quote-accent">new home for our startup</span>. If
-              you’re considering selling your company I highly recommend
-              MicroAcquire.
-            </p>
-          </div>
-        </div>
-        <div class="container founder-btn">
-          <div class="lists-icon">
-            <div class="link"></div>
-            <div class="link"></div>
-            <div class="link-active">
-              <img
-                src="https://cdn.iconscout.com/icon/free/png-256/dot-23-444664.png"
-                alt=""
-              />
-            </div>
-            <div class="link"></div>
-          </div>
-          <div class="arrow-btn">
-            <button class="leftArrow">
-              <img
-                src="https://microacquire.com/assets/img/arrow-right.e0ba7f.svg"
-                alt=""
-              />
-            </button>
-            <button class="rightArrow">
-              <img
-                src="https://microacquire.com/assets/img/arrow-right.e0ba7f.svg"
-                alt=""
-              />
-            </button>
-          </div>
-        </div>
-      </section>
-
-      <section class="sectionYellow">
-        <div class="container yellowCont">
-          <div class="yellowCont-header">
-            <h2>
-              Join over 100,000 founders and buyers already doing business on
-              MicroAcquire
-            </h2>
-          </div>
-          <div class="btn Join-btn">
-            <a href="#" class="page-items-link button btn-left"
-              >Join Now
-              <img
-                src="https://microacquire.com/assets/img/arrow-right-button.a68abe.svg"
-                alt=""
-              />
-            </a>
-          </div>
-        </div>
-      </section>
-    </main> -->
-
     <script
       type="module"
       src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
